--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
     "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx --fix --quiet src",
     "prepare": "husky install",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "build:win": "vite build  &&  electron-builder --win --x64",
+    "build:win-arm": "vite build  &&  electron-builder --win --arm64",
+    "build:mac": "vite build  &&  electron-builder --macos --x64",
+    "build:mac-arm": "vite build  &&  electron-builder --macos --arm64"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
